dev/release-aware/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-aware
  namespace: monitoring
spec:
  tls:
  - hosts:
    - release-aware.dev.sdpaks.equinor.com
    secretName: release-aware-tls
  rules:
    - host: release-aware.dev.sdpaks.equinor.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: release-aware-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-aware-web
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-aware-auth
  namespace: monitoring
spec:
  tls:
  - hosts:
    - release-aware.dev.sdpaks.equinor.com
    secretName: release-aware-tls
  rules:
    - host: release-aware.dev.sdpaks.equinor.com
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy-sdp
                port:
                  number: 4180
